[HTML 틀 완성단계] 버튼 두 가지만 수정하면 될 것 같다. / 더보기 섹션을 미리 작업을 못해서 나중에 함께 해야 할 것 같다.

--- a/raccoon-shopping-express/views/index.html
+++ b/raccoon-shopping-express/views/index.html
@@ -714,7 +714,7 @@
             <h3 class="title--text">쇼핑하우 파트너</h3>
             <div class="section__etc">
               <div class="contents-partner">
-                <div class="parnter--category">
+                <div class="partner--category">
                   <strong class="title--mall">오픈마켓</strong>
                   <ul class="list--mall">
                     <li class="_GI_">
@@ -933,12 +933,56 @@
           <div class="notice__wrapper">
             <div class="section_notice">
               <h2 class="tit_notice">공지사항</h2>
-              <a href="http://shopping.daum.net/siso/p/notice/detail/noticeId:651&amp;pageNum:1" class="link_notice _GC_">[공지] 카카오쇼핑 이용약관 개정 안내 (2020.11.12 시행)</a
-              ><span class="ico_comm2 ico_new">NEW</span>
+              <a href="http://shopping.daum.net/siso/p/notice/detail/noticeId:651&amp;pageNum:1" class="link_notice _GC_">[공지] 카카오쇼핑 이용약관 개정 안내 (2020.11.12 시행)</a>
+              <span class="ico_comm2 ico_new">NEW</span>
             </div>
           </div>
         </div>
       </section>
+      <footer>
+        <hr class="screen-out" />
+        <!-- // daumContent -->
+        <div class="left_banner" id="leftWingBanner"></div>
+        <!-- // quick menu -->
+        <div id="daumFoot" class="#footer" role="contentinfo" style="">
+          <div class="footer_shw">
+            <h2 class="screen-out">서비스 이용정보</h2>
+            <div class="wrap_link">
+              <div class="inner_link">
+                <a href="https://buy.kakao.com/about/11/terms" target="_blank" class="link_info _GC_">서비스 약관/정책</a><span class="txt_bar">|</span
+                ><a href="https://buy.kakao.com/about/11/privacy" target="_blank" class="link_info _GC_"><strong>개인정보처리방침</strong></a
+                ><!-- 2019-07-12 strong 태그 추가 수정 --><span class="txt_bar">|</span>
+                <a href="javascript:;" class="link_info _GC_" onclick="window.open('/html/noticeOfLaw.html','shopPop','width=988,height=500,resizable=yes,scrollbars=yes')">법적고지</a
+                ><span class="txt_bar">|</span> <a target="_blank" href="//www.kakaocommerce.com/youthpolicy" class="link_info _GC_">청소년보호정책</a><span class="txt_bar">|</span>
+                <a target="_blank" href="//ccs.kakao.com/help?service=150" class="link_info _GC_">쇼핑하우고객센터</a><span class="txt_bar">|</span>
+                <a target="_blank" href="//shopping.biz.daum.net/join/main" class="link_info _GC_">입점/광고안내</a><span class="txt_bar">|</span>
+                <a target="_blank" href="//shopping.biz.daum.net" class="link_info _GC_">쇼핑하우비즈센터</a>
+              </div>
+            </div>
+            <div class="wrap_info">
+              <p class="kakaocommerce_info">
+                (주)카카오커머스 대표이사 홍은택<span class="txt_bar">|</span>주소 : 경기도 성남시 분당구 대왕판교로660, A동 5층 일부(삼평동, 유스페이스1)<span class="txt_bar">|</span>사업자등록번호 :
+                891-88-00985 <a target="_blank" href="https://buy.kakao.com/about/11/businessinfo" class="link_info _GC_">사업자 정보확인</a><br />통신판매업신고번호 : 제 2019–성남분당B-0090호<span
+                  class="txt_bar"
+                  >|</span
+                ><!-- 2019-07-12 삭제 시작  구매안전서비스 : <a target="_blank" href="https://st.kakaocdn.net/shoppingstore/manual/payment_guarantee.png" class="link_info">가입사실확인</a><br>  2019-07-12 삭제 끝 -->이메일문의
+                : <a href="mailto:help.notice@kakaocorp.com" class="link_info _GC_">shopping_cs@kakaocommerce.com</a><span class="txt_bar">|</span>고객센터 : <strong>1544-5664</strong> (평일 10:00 -
+                18:30)
+              </p>
+              <p class="txt_caution">
+                (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.<br />
+                최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.<br />
+                각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기 바랍니다.
+              </p>
+              <small class="txt_copyright"> Copyright © <a href="https://kakaocommerce.com/" class="link_kakaocommerce _GC_">kakaocommerce</a> Corp. All rights reserved. </small>
+            </div>
+          </div>
+        </div>
+        <hr class="screen-out" />
+        <!-- // daumFoot -->
+        <div id="wrapMinidaum" data-gg="{lk:pc_gnb_minidaum}"></div>
+        <a href="#top" class="btn_follow _GC_"><span class="ico_home ico_follow">TOP</span></a>
+      </footer>
     </div>
   </body>
 </html>
