--- a/shopping/public/stylesheets/style.css
+++ b/shopping/public/stylesheets/style.css
@@ -1,8 +1,10 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+h1 {
+  color: #834; }
 
 a {
-  color: #00B7FF;
-}
+  color: #00B7FF; }
+
+body {
+  background-color: #111; }
+
+/*# sourceMappingURL=style.css.map */
