--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,11 +1,28 @@
+@import "./nav.scss";
+
 $site_max_width: 960px;
 $font_color: #333;
 $link_color: #00c;
+$search_color: #cecfd1;
+$bg_color: #f3f3f3;
 $font_family: Arial, sans-serif;
 $font_size: 15px;
 $line_height: percentage(20px / $font_size);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+}
+
 body {
+  width: 100%;
+  background-color: $bg_color;
+
   color: $font_color;
 
   // Property Nesting
@@ -17,7 +34,59 @@ body {
   line-height: $line_height;
 }
 
-#main {
-  width: 100%;
-  max-width: $site_max_width;
+header {
+  height: 500px;
+  outline: red solid;
+  display: block;
+}
+
+.header__search-wrap {
+  //outline: green solid;
+  background-color: white;
+  top: 43px;
+  width: 33%;
+  height: 55px;
+  left: 34%;
+  position: absolute;
+
+  #main-logo {
+    cursor: pointer;
+    display: inline-block;
+    height: 51px;
+    width: 119px;
+  }
+
+  .header__search-form {
+    position: absolute;
+    left: 18%;
+    margin: 0;
+    display: inline-block;
+    //outline: blue solid;
+    .search-form__input-wrap {
+      height: 578px;
+      height: 54px;
+      padding: 16px 60px 14px 30px;
+      border: $search_color 1px solid;
+      border-radius: 10px;
+    }
+
+    input {
+      width: 578px;
+      height: 22px;
+      font-size: 24px;
+      border: none;
+    }
+
+    .search-form__btn {
+      cursor: pointer;
+      position: absolute;
+      right: 2%;
+      top: 26%;
+      height: 25px;
+      width: 25px;
+      background-color: transparent;
+      border: none;
+      background: url("../images/ico.png") no-repeat;
+    }
+  }
 }
