--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>쇼핑하우</title>
-    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="style/reset.css"> 
 </head>
 <body>
     <div>
+        <%= homeContents.contents[0].eventContent.title %>
+    </div>
+    <div class="header__container">
         <header>
             <a href="#"><img></a>
             <div></div>
@@ -29,12 +32,12 @@
                 <li><a href="#">#구스다운</a></li>
                 <li><a href="#">#온수매트</a></li>
             </ul>
-            <ul>
+            <ul>    
                 <li><a href="#">로그인</a></li>
                 <li><a href="#">최근본 상품</a></li>
             </ul>
         </nav>
-    </div>
+    </div> <!-- .header__container -->
 
     <div class="content__container">
         <div class="content__banner">
