--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -1,11 +1,22 @@
 @import './reset.scss';
 
-$main-grey-color: #CECECE;
+$main-grey-color: #a7a7a7;
+$main-black-color: black;
+$main-white-color: white;
+$main-background-color: #F3F3F4;
 $primary-color: #FF4C3F;
-$page-side-margin: 3.4rem;
+$primary-font-family: 돋움,dotum,sans-serif;
+$page-side-margin: 6rem;
 $logo-width: 7.5rem;
 $logo-height: 3.2rem;
 $search-bar-padding: 1rem;
+$nav-item-width: 1.5rem;
+$nav-item-height: 1.5rem;
+$nav-item-border-radius: 50%;
+
+body {
+    font-family: $primary-font-family;
+}
 
 .nav {
     display: flex;
@@ -46,13 +57,138 @@ $search-bar-padding: 1rem;
         }
     }
 
-    .under-nav-wrapper {
-        width: 100%;
-        margin: 2rem, $page-side-margin;
+.under-nav-wrapper {
+     margin: 1rem $page-side-margin;
 
-        .under-nav-container {
+      .under-nav-container {
+          margin-top: 2rem;
+          display: flex;
+          position: relative;
+          justify-content: space-between;
+          align-items: center;
+      }
+
+      .under-nav-list{
+          padding: 1rem;
+          display: flex;
+      }
+
+      .under-nav-category {
+          align-items: center;
+          button {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              width: $nav-item-width;
+              height: $nav-item-height;
+              background-color: $main-black-color;
+              color: $main-white-color;
+              border-radius: $nav-item-border-radius;
+          }
+          span {
+              padding-left: 0.5rem;
+          }
+      }
+
+      .under-nav-list-item {
+          display: flex;     
+
+          li {
+            padding: 0 0.5rem;
+            font-weight: bold;
+          }
+            
+          .tag {
+            color: $main-grey-color;
+          }
+      }
+
+      .under-nav-right-item {
+          display: flex;
+          align-items: center;
+          
+          span {
+              padding-left: 0.5rem;
+          }
+
+          button {
+              height: $nav-item-height;
+              width: $nav-item-width;
+              color: $main-white-color;
+              background-color: $main-black-color;
+              border-radius: $nav-item-border-radius;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+          }
+
+      }
+}
+
+.main {
+    background-color: $main-background-color;
+
+    .main-top-section {
+        margin: 1rem $page-side-margin;
+        padding: 2rem 0;
+    }
+
+    .main-top-article {
+        display: flex;
+        flex-direction: column;
+
+        .main-top-article-fristline {
+            display: flex;
+            justify-content: center;
+
+            .slide {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-grow: 2; 
+                background-color: $main-white-color;
+                position: relative;
+            }
+
+            button {
+                outline: 0;
+                border: 0;
+                background: 0;
+                cursor: pointer;
+            }
+
+            .fa-angle-left,
+            .fa-angle-right {
+                padding: 0 1rem;
+                width: 3rem;
+                height: 3rem;
+            }
+
+            .main-top-slide-select{
+                bottom: 3rem;
+                position: absolute;
+
+                li {
+                    display: inline-block;
+                    width: 0.2rem;
+                    height: 0.5rem;
+                    padding: 0 0.5rem;
+                    background-color: $main-grey-color;
+                }
+            }
+        }
+
+        .main-top-article-secondline {
             display: flex;
 
+            img {
+                width: 12.5rem;
+                height: 12.5rem;
+            }
         }
     }
+
+}
+
+
 
