--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,35 +12,13 @@
     <title>FE-3-shoppingHow</title>
   </head>
   <body>
-    <header>
-      <nav class="nav">
-        <div class="nav-item logo"><img src="/img/logo.png" alt="logo" /></div>
-        <div class="nav-item nav-search-wrap">
-          <form action="" class="nav-search-bar">
-            <input type="text" name="search" class="search-bar" />
-            <i class="fas fa-search"></i>
-          </form>
-          <ol class="nav-search-rank">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ol>
-        </div>
-      </nav>
-    </header>
+    <header class="header"><% include ./parts/header %></header>
     <section class="under-nav-wrapper">
       <div class="under-nav-container">
-        <div class="under-nav-catergory">
-          <div>
+        <div class="under-nav-category under-nav-list">
+          <button>
             <i class="fas fa-bars"></i>
-          </div>
+          </button>
           <span>카테고리</span>
         </div>
         <div class="under-nav-list-item">
@@ -50,9 +28,7 @@
             <li>할인특가</li>
             <li>기획전</li>
           </ul>
-        </div>
-        <div class="under-nav-list-tag">
-          <ul class="under-nav-tag">
+          <ul class="under-nav-list tag">
             <li>#건강식품</li>
             <li>#제철음식</li>
             <li>#블루투스이어폰</li>
@@ -60,18 +36,98 @@
             <li>#노트북</li>
           </ul>
         </div>
-        <div class="under-nav-right">
-          <div class="under-nav-profile">
-            <i class="far fa-user"></i>
+        <div class="under-nav-list">
+          <div class="under-nav-right-item profile">
+            <button><i class="far fa-user"></i></button>
             <span>로그인</span>
           </div>
-          <div class="under-nav-product">
-            <i class="far fa-clone"></i>
+          <div class="under-nav-right-item product">
+            <button><i class="far fa-clone"></i></button>
             <span>장바구니</span>
+          </div>
+          <div class="down-arrow">
+            <i class="fas fa-angle-down"></i>
           </div>
         </div>
       </div>
     </section>
+    <main class="main">
+      <section class="main-top-section">
+        <article class="main-top-article">
+          <div class="main-top-article-fristline">
+            <div class="main-top-firstline-img">
+              <a href="#"
+                ><img src="/img/main-top-1.png" alt="main-top-first-img"
+              /></a>
+            </div>
+            <div class="main-top-firstline-img slide">
+              <div class="arrow-btn">
+                <button><i class="fas fa-angle-left"></i></button>
+              </div>
+              <a href="#">
+                <!--json으로 받아와야함-->
+                <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
+              </a>
+              <div class="arrow-btn">
+                <button><i class="fas fa-angle-right"></i></button>
+              </div>
+              <ul class="main-top-slide-select">
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+          </div>
+          <ul class="main-top-article-secondline">
+            <li class="main-top-article-img">
+              <a href="#"
+                ><img src="/img/main-top-3.jpg" alt="main-top-first-img"
+              /></a>
+              <div class="main-top-article-description">
+                <h6>지금은 신품종 전성시대</h6>
+                <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
+              </div>
+            </li>
+            <li class="main-top-article-img">
+              <a href="#"
+                ><img src="/img/main-top-4.jpg" alt="main-top-first-img"
+              /></a>
+              <div class="main-top-article-description">
+                <h6>지금은 신품종 전성시대</h6>
+                <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
+              </div>
+            </li>
+            <li class="main-top-article-img">
+              <a href="#"
+                ><img src="/img/main-top-5.jpg" alt="main-top-first-img"
+              /></a>
+              <div class="main-top-article-description">
+                <h6>지금은 신품종 전성시대</h6>
+                <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
+              </div>
+            </li>
+            <li class="main-top-article-img">
+              <a href="#"
+                ><img src="/img/main-top-6.jpg" alt="main-top-first-img"
+              /></a>
+              <div class="main-top-article-description">
+                <h6>지금은 신품종 전성시대</h6>
+                <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
+              </div>
+            </li>
+            <li class="main-top-article-img">
+              <a href="#"
+                ><img src="/img/main-top-7.jpg" alt="main-top-first-img"
+              /></a>
+              <div class="main-top-article-description">
+                <h6>지금은 신품종 전성시대</h6>
+                <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
+              </div>
+            </li>
+          </ul>
+        </article>
+      </section>
+    </main>
     example ejs
     <footer><% include ./parts/footer %></footer>
   </body>
