[CHORE]Set images json into ejs
router에서 랜더링할때 json 객체를 변수로 같이 선언해주어서 imgurl도 보내준다.

--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <img src='<%= planningEvent.mileageList[0].imgurl %>'>
-  </body>
+
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <img src='<%= home.contents[0].eventContent.imgurl %>'>
+  <img src='<%= event.mileageList[0].imgurl %>'>
+</body>
+
 </html>
