[HTML] 버튼 2개 수정 완료

--- a/raccoon-shopping-express/views/index.html
+++ b/raccoon-shopping-express/views/index.html
@@ -846,7 +846,7 @@
                       <a href="#" target="_blank" class="link--mall">위메프</a>
                     </li>
                     <li class="_GI_">
-                      <a href="#" target="_blank" class="link--mall">티몬</a>
+                      <a href="#" target="_blank" class="link--mall">라쿤</a>
                     </li>
                   </ul>
                 </div>
