--- a/views/index.html
+++ b/views/index.html
@@ -27,15 +27,11 @@
         </form>
       </div>
       <nav class="header__nav-menu">
+        <div class="list__category">
+          <button id="list__category-btn"></button>
+          <span>카테고리</span>
+        </div>
         <ul class="header__nav-menu__list">
-          <button id="list__category-btn">
-            <span
-              ><img
-                src="../public/images/ico.png"
-                alt="hamburger-btn"
-                id="hamburger" /></span
-            >카테고리
-          </button>
           <li>핫딜</li>
           <li>베스트100</li>
           <li>할인특가</li>
@@ -49,13 +45,9 @@
           <li>#노트북</li>
         </ul>
         <ul class="header__nav-menu__user">
+          <li><button id="user__login-btn"></button><span>로그인</span></li>
           <li>
-            <button id="user__login-btn"><span>아이콘</span>로그인</button>
-          </li>
-          <li>
-            <button id="user__recently-btn">
-              <span>아이콘</span>최근본 상품
-            </button>
+            <button id="user__recently-btn"></button><span>최근본 상품</span>
           </li>
         </ul>
       </nav>
