--- a/scss/index.scss
+++ b/scss/index.scss
@@ -17,11 +17,63 @@ main {
   }
   .carousel {
     padding: 0 10vw;
-    &-box {
+    &__box {
       overflow: hidden;
       position: relative;
       width: 490px;
       text-align: center;
+    }
+    &__paging {
+      .paging-arrow {
+        position: absolute;
+        width: 100%;
+        top: calc(50% - 25px);
+        left: 0;
+        &__left, &__right {
+          position: absolute;
+          left: 5.5vw;
+          cursor: pointer;
+          padding: 25px;
+          &::before {
+            content: "";
+            border-left: 1px solid #333;
+            position: absolute;
+            height: 30px;
+            top: 0;
+            transform: rotate(45deg);
+          }
+          &::after {
+            content: "";
+            border-left: 1px solid #333;
+            position: absolute;
+            height: 30px;
+            top: 21px;
+            transform: rotate(-45deg);
+          }
+        }
+        &__right {
+          position: absolute;
+          left: initial;
+          right: 5.5vw;
+          transform: rotate(180deg);
+        }
+      }
+      .paging-hover {
+        text-align: center;
+        position: relative;
+        top: -6vh;
+        cursor: default;
+        &__button {
+          display: inline-block;
+          width: 15px;
+          height: 5px;
+          background-color: #ccc;
+          transition: background-color 0.3s linear;
+          &.active {
+            background-color: #000;
+          }
+        }
+      }
     }
     .panel {
       display: inline-block;
@@ -69,6 +121,12 @@ main {
           background: #777;
           transform: rotate(45deg);
         }
+      }
+      &.not-used {
+        user-select: none;
+        pointer-events: none;
+        opacity: 0.3;
+        cursor: default;
       }
     }
   }
